--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <style>
-            canvas, button{
+            canvas{
                 display: block;
                 margin: auto;
                 background-color: white;
@@ -18,15 +18,23 @@
     </head>
 
     <body>
+        <svg width="190" height="160" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 80 Q 95 10 180 80" stroke="#369" fill="transparent"  stroke-width="5"/>
+            
+            <circle cx="10" cy="80" r="10" stroke="transparent" fill="#f63" stroke-width="5"/>
+            <circle cx="95" cy="10" r="10" stroke="transparent" fill="#f63" stroke-width="5"/>
+            <circle cx="180" cy="80" r="10" stroke="transparent" fill="#f63" stroke-width="5"/>
+          </svg>
+          <div id="path"></div>
+
         <div>
             <canvas id="canvas"></canvas>
         </div>
-        <div>
-            <button id="clear" type="button">Clear</button>
-        </div>
+
         <script src="laba.js"></script>
         <script src="cubicSpline.js"></script>
         <script src="quadraticSpline.js"></script>
         <script src="tridiagonalSolve.js"></script>
+        <script src="bezie.js"></script>
     </body>
 </html>
